--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -22,9 +22,11 @@
 		
 	</div><!-- end .header -->
 	<div class="contents">
+		
 		<div class="question_area">
 			<div class="question_l"><p class="fixed">Question of the week</p></div>
-			<div class="question_r"><p>Was there anyone where you were like 'This person is a genius' at first glance?"</p>
+			<div class="question_r"><p class="weekly">Was there anyone where you were like 'This person is a genius' at first glance?"
+				</p>
 			</div>
 		</div>		
 	
