--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -24,8 +24,8 @@
 	<div class="contents">
 		
 		<div class="question_area">
-			<div class="question_l"><p class="fixed">Question of the week</p></div>
-			<div class="question_r"><p class="weekly">Was there anyone where you were like 'This person is a genius' at first glance?"
+			<div class="column fixed"><p>Question of the week</p></div>
+			<div class="column weekly"><p>Was there anyone where you were like 'This person is a genius' at first glance?"
 				</p>
 			</div>
 		</div>		
