--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -24,12 +24,15 @@
 	<div class="contents">
 		
 		<div class="question_area">
-			<div class="column fixed"><p>Question of the week</p></div>
-			<div class="column weekly"><p>Was there anyone where you were like 'This person is a genius' at first glance?"
-				</p>
+			<div class="column fixed">
+            <p><em>Question of the week</em></p>
+            </div>
+			<div class="column weekly">
+            <p>Was there anyone where you were like 'This person is a genius' at first glance?"</p>
+        
 			</div>
-		</div>		
-	
+		</div>
+		
 		<!-- Souboutei Kowasubeshi -->
 		<div class="comment_area">
 			<h2><a href="#">Souboutei Kowasubeshi <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
