--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -21,17 +21,16 @@
 		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt=""></div>
 		
 	</div><!-- end .header -->
-	<div class="contents">
-		
-		<div class="question_area">
-			<div class="column fixed">
-            <p><em>Question of the week</em></p>
-            </div>
-			<div class="column weekly">
+	
+	<div class="question_area">
+		<div class="column fixed">
+            <p><em>Question of the week</em></p></div>
+		<div class="column weekly">
             <p>Was there anyone where you were like 'This person is a genius' at first glance?"</p>
-        
-			</div>
-		</div>
+        	</div>
+	</div>
+	
+	<div class="contents">
 		
 		<!-- Souboutei Kowasubeshi -->
 		<div class="comment_area">
