--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -24,9 +24,9 @@
 	
 	<div class="question_area">
 		<div class="column fixed">
-            <p><em>Question of the week</em></p></div>
+            <em>Question of the week</em></div>
 		<div class="column weekly">
-            <p>Was there anyone where you were like 'This person is a genius' at first glance?"</p>
+            Was there anyone where you were like 'This person is a genius' at first glance?"
         	</div>
 	</div>
 	
