--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -18,7 +18,7 @@
 	<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's Weekly Shonen Sunday posting order &amp; comments from the author.</span></div>
-		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSS issue 27" style="margin-bottom:10px"></div>
+		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSS issue 27"></div>
 	
 	</div><!-- end .header -->
 	<div class="question_area">
