--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -18,10 +18,9 @@
 	<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's Weekly Shonen Sunday posting order &amp; comments from the author.</span></div>
-		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSS issue 27"></div>
+		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSS issue 27"><br><p> </p></div>
 	
-	</div><!-- end .header -->
-	<p> </p>	
+	</div><!-- end .header -->	
 	<div class="question_area">
 		<div class="column fixed">
             <em>Question of the week</em></div>
