--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -1,4 +1,3 @@
-
 <html>
 <meta charset="UTF-8">	
 <head>
@@ -23,7 +22,8 @@
 	</div><!-- end .header -->	
 	<div class="question_area">
 		<div class="column fixed">
-            <em>Question of the week</em></div>
+			<b><em>Question of the week</em></b>
+		</div>
 		<div class="column weekly">
             Was there anyone where you were like 'This person is a genius' at first glance?"
         	</div>
