--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -368,7 +368,10 @@
 		</div>
 	</div><!-- end .contents -->
 	<div id="footer">
+		<p>Original Concept: <a href="https://mangaplus.shueisha.co.jp/">MANGA Plus</a></p>
+		<p>Translation: WSStalkback <a href="https://twitter.com/Wsstalkback">twitter</a>|<a href="https://wsstalkback.blogspot.com/">blog</a></p>
 		<div class="cooyactxt">&copy; SHOGAKUKAN Inc. All rights reserved.</div>
+	
 	</div><!-- end .footer -->
 </div><!-- end .container -->
 
