--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -22,7 +22,7 @@
 	</div><!-- end .header -->	
 	<div class="question_area">
 		<div class="column fixed">
-			<b><em>Question of the week</em></b>
+			<em><b>Question of the week</b></em>
 		</div>
 		<div class="column weekly">
             Was there anyone where you were like 'This person is a genius' at first glance?"
