--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -61,5 +61,9 @@ h2 a:active {
 <a href="19_27/">
   <img src="19_27/img/img_ss.jpg" class="center">
 </a>
+<h2><a href="19_28/">Weekly Shonen Sunday #28 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em" ></a></h2>
+<a href="19_28/">
+  <img src="19_28/img/img_ss.jpg" class="center">
+</a>
   </div>	
 </body>
