--- a/wss/TOC/19_28/index.html
+++ b/wss/TOC/19_28/index.html
@@ -31,28 +31,68 @@
 	
 	<div class="contents">
 		
-		<!-- MAO--><div class="comment_area"><h2><a href="#">MAO<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><
-div class="detail_area">
-<div class="l_side"><img src="img/mao.png" alt=""></div>
-<div class="r_side">
-<p class="author">Rumiko Takahashi</p> Asami Kobayashi's "The Sound of the Rain is the Sound of Chopin" 
-</div>
-</div>
-</div>
-<!-- Detective Conan--><div class="comment_area"><h2><a href="#">Detective Conan<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/conan.png" alt=""></div><div class="r_side"><p class="author">Gosho Aoyama</p>Stuff like "Fate" (Lol)...? (TN- I assume he means the Detective Conan ending song of the same title?)</div></div></div>
-<!-- Hoankan Evans no Uso ~Dead or Love~--><div class="comment_area"><h2><a href="#">Hoankan Evans no Uso ~Dead or Love~<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/hoankan.png" alt=""></div><div class="r_side"><p class="author">Mizuki Kuriyama</p>Yuuko Andou's song "Words of a loner" has a rainy day motif. </div></div></div>
-<!-- Komi-san wa komyusho desu--><div class="comment_area"><h2><a href="#">Komi-san wa komyusho desu<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/komisan.png" alt=""></div><div class="r_side"><p class="author">Tomohito Oda</p> Enya!</div></div></div>
-<!-- Kimi wa 008--><div class="comment_area"><h2><a href="#">Kimi wa 008<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/kmiha008.png" alt=""></div><div class="r_side"><p class="author">Syun Matsuena</p>Durning rainy days I enjoy listening the sounds of the room itself.</div></div></div>
-<!-- Maoujo de Oyasumi--><div class="comment_area"><h2><a href="#">Maoujo de Oyasumi<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/maojo.png" alt=""></div><div class="r_side"><p class="author">Kagiji Kumanomata</p>Kirinji's "Don't despise the rain" ...though well, I guess it is a song associated with rain anyway...</div></div></div>
+		<!-- MAO-->
+		<div class="comment_area">
+			<h2><a href="#">MAO<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/mao.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Rumiko Takahashi</p>Â Asami Kobayashi's "The Sound of the Rain is the Sound of Chopin"Â 
+				</div>
+			</div>
+		</div>
+		<!-- Detective Conan-->
+		<div class="comment_area">
+			<h2><a href="#">Detective Conan<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/conan.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Gosho Aoyama</p>Stuff like "Fate" (Lol)...? (TN- I assume he means the Detective Conan ending song of the same title?)
+				</div>
+			</div>
+		</div>
+		<!-- Hoankan Evans no Uso ~Dead or Love~-->
+		<div class="comment_area">
+			<h2><a href="#">Hoankan Evans no Uso ~Dead or Love~<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/hoankan.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Mizuki Kuriyama</p>Yuuko Andou's song "Words of a loner" has a rainy day motif.Â 
+				</div>
+			</div>
+		</div>
+		<!-- Komi-san wa komyusho desu-->
+		<div class="comment_area">
+			<h2><a href="#">Komi-san wa komyusho desu<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/komisan.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Tomohito Oda</p>Â Enya!
+				</div>
+			</div>
+		</div>
+		<!-- Kimi wa 008-->
+		<div class="comment_area">
+			<h2><a href="#">Kimi wa 008<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/kimiha008.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Syun Matsuena</p>Durning rainy days I enjoy listening the sounds of the room itself.
+				</div>
+			</div>
+		</div>
+<		!-- Maoujo de Oyasumi-->
+	<div class="comment_area">
+		<h2><a href="#">Maoujo de Oyasumi<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/maojo.png" alt=""></div><div class="r_side"><p class="author">Kagiji Kumanomata</p>Kirinji's "Don't despise the rain" ...though well, I guess it is a song associated with rain anyway...</div></div></div>
 <!-- Fire Rabbit!!--><div class="comment_area"><h2><a href="#">Fire Rabbit!!<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/firerabbit.png" alt=""></div><div class="r_side"><p class="author">Aya Hirakawa</p>Rainy days are for western songs~</div></div></div>
-<!-- SWITCH--><div class="comment_area"><h2><a href="#">SWITCH<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/switch.png" alt=""></div><div class="r_side"><p class="author">Atsushi Namikiri</p>BEGIN. </div></div></div>
+<!-- SWITCH--><div class="comment_area"><h2><a href="#">SWITCH<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/switch.png" alt=""></div><div class="r_side"><p class="author">Atsushi Namikiri</p>BEGIN.</div></div></div>
 <!-- Tonikaku Cawaii--><div class="comment_area"><h2><a href="#">Tonikaku Cawaii<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/tonikaku.png" alt=""></div><div class="r_side"><p class="author">Kenjiro Hata</p>Nothing in particular.</div></div></div>
 <!-- Amano Megumi wa suki darake!--><div class="comment_area"><h2><a href="#">Amano Megumi wa suki darake!<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/amano.png" alt=""></div><div class="r_side"><p class="author">Nekoguchi</p>Rip Slyme's "Blue Be-Bop". Other than that, stuff like Gonchichi's music and such.</div></div></div>
-<!-- Souboutei Kowasubeshi--><div class="comment_area"><h2><a href="#">Souboutei Kowasubeshi<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/sobotei.png" alt=""></div><div class="r_side"><p class="author">Kazuhiro Fujita</p>The Musical "Singin' in the rain." The theme especially. It makes me feel better, especially the movie. </div></div></div>
+<!-- Souboutei Kowasubeshi--><div class="comment_area"><h2><a href="#">Souboutei Kowasubeshi<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/sobotei.png" alt=""></div><div class="r_side"><p class="author">Kazuhiro Fujita</p>The Musical "Singin' in the rain." The theme especially. It makes me feel better, especially the movie.Â </div></div></div>
 <!-- Sokyuu no Ariadne--><div class="comment_area"><h2><a href="#">Sokyuu no Ariadne<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/ariadne.png" alt=""></div><div class="r_side"><p class="author">Nobuhiro Yagi</p>Bohemian Rhapsody. I've been listening to it a lot more lately, actually...</div></div></div>
 <!-- Yuko sae tatakaeba--><div class="comment_area"><h2><a href="#">Yuko sae tatakaeba<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/yukosae.png" alt=""></div><div class="r_side"><p class="author">Sei Fukui</p>Sakanaction's "Ame(b)"!</div></div></div>
 <!-- Major 2nd--><div class="comment_area"><h2><a href="#">Major 2nd<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/major2nd.png" alt=""></div><div class="r_side"><p class="author">Takuya Mitsuda</p>Chisato Moritaka's "Rain".</div></div></div>
-<!-- Daiku no Hato--><div class="comment_area"><h2><a href="#">Daiku no Hato<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/dai9nohato.png" alt=""></div><div class="r_side"><p class="author">Michiteru Kusaba</p> I can heaar (Can heaar) the Frog's sooong (The Frog's sooong.)</div></div></div>
+<!-- Daiku no Hato--><div class="comment_area"><h2><a href="#">Daiku no Hato<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/dai9nohato.png" alt=""></div><div class="r_side"><p class="author">Michiteru Kusaba</p>I can heaar (Can heaar) the Frog's sooong (The Frog's sooong.)</div></div></div>
 <!-- Ponkotsu-chan Kenshochuu--><div class="comment_area"><h2><a href="#">Ponkotsu-chan Kenshochuu<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/ponkotsu.png" alt=""></div><div class="r_side"><p class="author">Tsubasa Fukuchi</p>Motohiro Hata's song "Rain".</div></div></div>
 <!-- Be Blues!--><div class="comment_area"><h2><a href="#">Be Blues!<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/beblues.png" alt=""></div><div class="r_side"><p class="author">Motoyuki Tanaka</p>Seiko Matsuda's "Rain Resort".</div></div></div>
 <!-- Maiko-san chi no Makanai-san--><div class="comment_area"><h2><a href="#">Maiko-san chi no Makanai-san<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/maikosan.png" alt=""></div><div class="r_side"><p class="author">Aiko Koyama</p>Yuko Hara's "Hydrangea Song."</div></div></div>
@@ -61,10 +101,19 @@ div class="detail_area">
 <!-- Chrono Magia: Infinity Gear--><div class="comment_area"><h2><a href="#">Chrono Magia: Infinity Gear<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/chronomugen.png" alt=""></div><div class="r_side"><p class="author">Homura Kawamoto</p>Hideaki Kikunaga's "Rainy Blue" is the only correct answer!</div></div></div>
 <!-- Tantei Xeno to Nanatsu no Satsujin Misshitsu--><div class="comment_area"><h2><a href="#">Tantei Xeno to Nanatsu no Satsujin Misshitsu<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/tanteixeno.png" alt=""></div><div class="r_side"><p class="author">Kyouichi Nanatsuki</p>I love Remioromen's "Umbrella Jellyfish".</div></div></div>
 <!-- Undine ha Kyou mo Koi wo suru ka?--><div class="comment_area"><h2><a href="#">Undine ha Kyou mo Koi wo suru ka?<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/undine.png" alt=""></div><div class="r_side"><p class="author">Shinya Misu</p>I like to listen to songs that fit the seasons. Right now, "Alala's Spell" is in.</div></div></div>
-<!-- Zettai Karen Children--><div class="comment_area"><h2><a href="#">Zettai Karen Children<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/children.png" alt=""></div><div class="r_side"><p class="author">Takashi Shiina</p>I can't really say too much due to copyright issues, but it's a feeling of "being soaked for your sake, dummy". (TN- I thiiiink he's talking about the song by Iori that was used in the Detective Conan anime "As long as you're here".) </div></div></div>
+<!-- Zettai Karen Children--><div class="comment_area"><h2><a href="#">Zettai Karen Children<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/children.png" alt=""></div><div class="r_side"><p class="author">Takashi Shiina</p>I can't really say too much due to copyright issues, but it's a feeling of "being soaked for your sake, dummy". (TN- I thiiiink he's talking about the song by Iori that was used in the Detective Conan anime "As long as you're here".)Â </div></div></div>
 <!-- Aozakura Bouei daigakkou Monogatari--><div class="comment_area"><h2><a href="#">Aozakura Bouei daigakkou Monogatari<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/aozakura.png" alt=""></div><div class="r_side"><p class="author">Hikaru Nikaido</p>Mr. Children and Mr. Big.</div></div></div>
 <!-- Youkai Giga--><div class="comment_area"><h2><a href="#">Youkai Giga<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/yokaigiga.png" alt=""></div><div class="r_side"><p class="author">Satsuki Satou</p>That tune by Aki Yashiro.</div></div></div>
-<!-- Tokaichi Hitoribocchi--><div class="comment_area"><h2><a href="#">Tokaichi Hitoribocchi<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/tokatihitori.png" alt=""></div><div class="r_side"><p class="author">Yuuji Yokoyama</p> Tokaichi doesn't have a rainy season, teehee~ </div></div></div>
+		<!-- Tokaichi Hitoribocchi-->
+		<div class="comment_area">
+			<h2><a href="#">Tokaichi Hitoribocchi<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/tokatihitori.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Yuuji Yokoyama</p>Tokaichi doesn't have a rainy season, teehee~Â 
+				</div>
+			</div>
+		</div>
 
 	</div><!-- end .contents -->
 	<div id="footer">
