--- a/wss/TOC/19_28/index.html
+++ b/wss/TOC/19_28/index.html
@@ -17,7 +17,7 @@
 	<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's Weekly Shonen Sunday posting order &amp; comments from the author.</span></div>
-		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSS issue 27"></div>
+		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSS issue 28"></div>
 	
 	</div><!-- end .header -->	
 	<div class="question_area">
@@ -106,7 +106,7 @@
 <!-- Youkai Giga--><div class="comment_area"><h2><a href="#">Youkai Giga<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/yokaigiga.png" alt=""></div><div class="r_side"><p class="author">Satsuki Satou</p>That tune by Aki Yashiro.</div></div></div>
 		<!-- Tokaichi Hitoribocchi-->
 		<div class="comment_area">
-			<h2><a href="#">Tokaichi Hitoribocchi<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Tokaichi Hitoribocchi Nouen<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/tokatihitori.png" alt=""></div>
 				<div class="r_side">
