--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 </head>
 <h1>Hello World</h1>
 
-<a href="/TOC">TOC hub</a>
+<p><a href="/TOC"><img src="TOC/img/logo.svg">WSJ TOC hub</a></p>
+<p><a href="wss/TOC"><img src="wss/TOC/img/logo.png">WSS TOC hub</a></P>
