--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
   <link rel="shortcut icon"
    type="image/x-icon"
         href="fav.ico">
+ <style>
+   img { 
+  width: 50%;
+  max-width: 700px;
+}
+  </style>
 </head>
 <h1>Hello World</h1>
 
-<p><a href="/TOC"><img src="TOC/img/logo.svg">WSJ TOC hub</a></p>
-<p><a href="wss/TOC"><img src="wss/TOC/img/logo.png">WSS TOC hub</a></P>
+<p><a href="/TOC"><img src="TOC/img/logo.svg"><br>WSJ TOC hub</a></p>
+<p><a href="wss/TOC"><img src="wss/TOC/img/logo.png"><br>WSS TOC hub</a></P>
