--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <link rel="shortcut icon"
    type="image/x-icon"
         href="fav.ico">
+ <title>Home</title> 
  <style>
    img { 
   width: 50%;
@@ -9,7 +10,7 @@
 }
   </style>
 </head>
-<h1>Hello World</h1>
+<h1>Home</h1>
 
 <p><a href="/TOC"><img src="TOC/img/logo.svg"><br>WSJ TOC hub</a></p>
 <p><a href="wss/TOC"><img src="wss/TOC/img/logo.png"><br>WSS TOC hub</a></P>
