--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <link rel="shortcut icon"
    type="image/x-icon"
         href="fav.ico">
- <title>Home</title> 
+ <title>Home</title>
+ <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
  <style>
    
    .center {
@@ -35,7 +36,7 @@ div.desc {
 .responsive {
   padding: 0 6px;
   float: left;
-  width: 24.99999%;
+  width: 49.99999%;
 }
 @media only screen and (max-width: 700px) {
   .responsive {
