--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
  <title>Home</title>
  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
  <style>
-   
+    h2 {
+ font-size: 1em;
+}
    .center {
   display: block;
   margin-left: auto;
@@ -64,7 +66,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a href="/TOC">
-      <img src="TOC/img/logo.svg" alt="" width="600" height="400">
+      <img src="TOC/img/logo.png" alt="">
     </a>
     <div class="desc"><h2><a href="/TOC">WSJ TOC hub</a></h2></div>
   </div>
@@ -74,7 +76,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a href="wss/TOC">
-      <img src="wss/TOC/img/logo.png" alt="" width="600" height="400">
+      <img src="wss/TOC/img/logo.png" alt="">
     </a>
     <div class="desc"><h2><a href="wss/TOC">WSS TOC hub</a></h2></div>
   </div>
