--- a/TOC/index.html
+++ b/TOC/index.html
@@ -30,7 +30,11 @@ img {
   max-width: 1000px;
 }
  h1 {
+  font-size: 1.5em;
   border-bottom: 3px solid yellow;
+}
+h2 {
+ font-size: 1.2em;
 }
 h2 a {
      text-decoration: none;
@@ -54,7 +58,7 @@ h2 a:active {
 </head>
 <body>
   <div class="content">
-<img src="img/logo.svg" style="width:75%" class="center">
+<img src="img/logo.svg" style="width:70%" class="center">
 <h1>Weekly Shonen Jump Table of Contents & Author Comments</h1>
    
 <h2><a href="19_10/">Weekly Shonen Jump #10 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
