--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -100,7 +100,7 @@ div.desc {
 </head>
 <body>
 <div class="content">
-<img src="https://manganimy.github.io/wss/TOC/img/logo.png" style="width:75%" class="center">
+<img src="https://manganimy.github.io/wss/TOC/img/logo.png" style="width:70%" class="center">
 <h1>Weekly Shonen Sunday Table of Contents &amp; Author Comments</h1>
 
   
@@ -127,7 +127,7 @@ div.desc {
 <div class="clearfix"></div>
 
 <div style="padding:6px; text-align:justify;">
-  <p>.</p>
+  <p>Translation of the Author Comments by WSStalkback:  <a href="https://twitter.com/Wsstalkback">twitter</a>|<a href="https://wsstalkback.blogspot.com/">blog</a></p>
 </div>
 </div>
 </body>
