--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -126,7 +126,7 @@ div.desc {
 
 <div class="clearfix"></div>
 
-<div style="padding:6px; text-align:justify;">
+<div style="padding:6px; text-align:justify; class="center"">
   <p>Translation of the Author Comments by WSStalkback:  <a href="https://twitter.com/Wsstalkback">twitter</a>|<a href="https://wsstalkback.blogspot.com/">blog</a></p>
 </div>
 </div>
