--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -126,8 +126,8 @@ div.desc {
 
 <div class="clearfix"></div>
 
-<div style="padding:6px; text-align:justify; class="center"">
-  <p>Translation of the Author Comments by WSStalkback:  <a href="https://twitter.com/Wsstalkback">twitter</a>|<a href="https://wsstalkback.blogspot.com/">blog</a></p>
+<div style="padding:6px; text-align:justify; ">
+  <p class="center">Translation of the Author Comments by WSStalkback:  <a href="https://twitter.com/Wsstalkback"><img src"img/twt.png"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png"></a></p>
 </div>
 </div>
 </body>
