--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -127,7 +127,7 @@ div.desc {
 <div class="clearfix"></div>
 
 <div style="padding:6px; text-align:justify; ">
-  <p class="center">Author Comments Translations by WSStalkback: <a href="https://twitter.com/Wsstalkback"><img src="img/twt.png"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png"></a></p>
+  <p class="center">Author Comments Translations by WSStalkback: <a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="height:1em"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="height:1em"></a></p>
 </div>
 </div>
 </body>
