--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -50,6 +50,9 @@ h2 a:hover {
 h2 a:active {
 	color: black;
 }
+h3 {
+	font-size:1.3em;
+}
 div.gallery {
   border: 1px solid #ccc;
 }
@@ -126,8 +129,8 @@ div.desc {
 
 <div class="clearfix"></div>
 
-<div style="padding:6px; text-align:justify; ">
-  <p class="center">Author Comments Translations by WSStalkback: <a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="height:1em"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="height:1em"></a></p>
+<div style="padding:6px; ">
+  <p class="center"><h3>Author Comments Translations by WSStalkback: <a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="height:1.3em"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="height:1.3em"></a></h3></p>
 </div>
 </div>
 </body>
