--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -51,7 +51,7 @@ h2 a:active {
 	color: black;
 }
 h3 {
-	font-size:1.3em;
+	font-size:1em;
 }
 div.gallery {
   border: 1px solid #ccc;
@@ -130,7 +130,7 @@ div.desc {
 <div class="clearfix"></div>
 
 <div style="padding:6px; ">
-  <p class="center"><h3>Author Comments Translations by WSStalkback: <a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="height:1.3em"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="height:1.3em"></a></h3></p>
+<h3 class="center">Author Comments Translations: WSStalkback<a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="height:1em"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="height:1em"></a></h3>
 </div>
 </div>
 </body>
