--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -130,7 +130,7 @@ div.desc {
 <div class="clearfix"></div>
 
 <div style="padding:6px; ">
-<h3 class="center">Author Comments Translations: WSStalkback <a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="height:1em"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="height:1em"></a></h3>
+<h3 class="center">Translations: WSStalkback <a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="height:1em"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="height:1em"></a></h3>
 </div>
 </div>
 </body>
