--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -51,7 +51,7 @@ h2 a:active {
 	color: black;
 }
 h3 {
-	font-size:0.8em;
+	font-size:1em;
 }
 div.gallery {
   border: 1px solid #ccc;
@@ -130,7 +130,8 @@ div.desc {
 <div class="clearfix"></div>
 
 <div style="padding:6px; ">
-<h3 class="center">Translations: WSStalkback <a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="height:1em"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="height:1em"></a></h3>
+	<h3 class="center">Translations: WSStalkback</h3> 
+	<p class="center"><a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="height:1em"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="height:1em"></a></p>
 </div>
 </div>
 </body>
