--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -131,8 +131,8 @@ div.desc {
 
 
 </div>
-<div class="center" style="padding:2px; ">
-	<h3>Translations: WSStalkback</h3> 
+<div>
+	<h3 class="center">Translations: WSStalkback</h3> 
 	<p><a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="height:1em"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="height:1em"></a></p>
 </div>	
 </body>
