--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -52,6 +52,7 @@ h2 a:active {
 }
 h3 {
 	font-size:1em;
+	  border-top: 3px solid red;
 }
 div.gallery {
   border: 1px solid #ccc;
@@ -129,10 +130,10 @@ div.desc {
 
 <div class="clearfix"></div>
 
-
-</div>
-<div>
-	<h3 class="center">Translations: WSStalkback</h3> 
+<div class="center" style="text-align:center">
+	<h3>Translations: WSStalkback</h3> 
 	<p><a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="height:1em"></a>|<a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="height:1em"></a></p>
 </div>	
+</div>
+
 </body>
