--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -4,10 +4,10 @@
         href="img/fav.ico">
 <title>Weekly Shonen Sunday TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Sunday TOC Hub">
-<meta property="og:description" content="Archive of Weekly Shonen Sunday Author Comments">
+<meta property="og:title" content="Weekly Shonen Magazine TOC Hub">
+<meta property="og:description" content="Archive of Weekly Shonen Magazine Author Comments">
 <meta property="og:image" content="img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io/wss/TOC/">
+<meta property="og:url" content="https://manganimy.github.io/wsm/TOC/">
 <meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
@@ -100,7 +100,7 @@ div.desc {
 </head>
 <body>
 <div class="content">
-<img src="https://manganimy.github.io/wss/TOC/img/logo.png" style="width:70%" class="center">
+<img src="img/logo.png" style="width:70%" class="center">
 <h1>Weekly Shonen Sunday Table of Contents &amp; Author Comments</h1>
 
   
