--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -103,7 +103,7 @@ div.desc {
 </head>
 <body>
 <div class="content">
-<img src="https://manganimy.github.io/wss/TOC/img/logo.png" style="width:70%" class="center">
+<img src="img/logo.png" style="width:70%" class="center">
 <h1>Weekly Shonen Sunday Table of Contents &amp; Author Comments</h1>
 
   
