--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -11,7 +11,7 @@
 <meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
-  background: #f5f5dc;
+  background: #ffafaf;
   color: black;
   font-family: Futura,Trebuchet MS,sans-serif,Arial;
  }
@@ -27,7 +27,7 @@
 } 
  h1 {
   font-size: 1.5em;
-  border-bottom: 3px solid red;
+  border-bottom: 3px solid blue;
 }
  h2 {
  font-size: 1em;
@@ -101,25 +101,15 @@ div.desc {
 <body>
 <div class="content">
 <img src="img/logo.png" style="width:70%" class="center">
-<h1>Weekly Shonen Sunday Table of Contents &amp; Author Comments</h1>
-
-  
-<div class="responsive">
-  <div class="gallery">
-    <a href="19_27/">
-      <img src="19_27/img/img_ss.jpg" alt="" width="600" height="400">
-    </a>
-    <div class="desc"><h2><a href="19_27/">Weekly Shonen Sunday #27 2019</a></h2></div>
-  </div>
-</div>
+<h1>Weekly Shonen Magazine Table of Contents &amp; Author Comments</h1>
 
 
 <div class="responsive">
   <div class="gallery">
     <a href="19_28/">
-      <img src="19_28/img/img_ss.jpg" alt="" width="600" height="400">
+      <img src="19_28/img/img_wm.jpg" alt="" width="600" height="400">
     </a>
-    <div class="desc"><h2><a href="19_28/">Weekly Shonen Sunday #28 2019</a></h2></div>
+    <div class="desc"><h2><a href="19_28/">Weekly Shonen Magazine #28 2019</a></h2></div>
   </div>
 </div>
 
