--- a/wsm/TOC/19_28/index.html
+++ b/wsm/TOC/19_28/index.html
@@ -17,7 +17,7 @@
 	<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's Weekly Shonen Magazine posting order &amp; comments from the author.</span></div>
-		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSM issue 28"></div>
+		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wm.jpg" alt="WSM issue 28"></div>
 	
 	</div><!-- end .header -->	
 	<div class="question_area">
