--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -11,7 +11,7 @@
 <meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
-  background: #ffafaf;
+  background: #ffdddd;
   color: black;
   font-family: Futura,Trebuchet MS,sans-serif,Arial;
  }
@@ -45,7 +45,7 @@ h2 a:visited {
 	color: black;
 }
 h2 a:hover {
-	color: red;
+	color: blue;
 }
 h2 a:active {
 	color: black;
