--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -11,7 +11,8 @@
 <meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
-  background: #ffdddd;
+  background-color: #ffdddd;
+  background-image: linear-gradient(#ffdddd, #f6626b);	 
   color: black;
   font-family: Futura,Trebuchet MS,sans-serif,Arial;
  }
