--- a/wsm/TOC/19_28/index.html
+++ b/wsm/TOC/19_28/index.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Table of contents">
 <meta name="Keywords" content="Table of contents">
 <link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="https://manganimy.github.io/wsm/TOC/css/style.css">
 </head>
 
 <body>
