--- a/wsm/TOC/19_28/index.html
+++ b/wsm/TOC/19_28/index.html
@@ -36,8 +36,7 @@
 	</div><!-- end .contents -->
 	<div id="footer">
 		<div class="cooyactxt">Original Concept: <a href="https://mangaplus.shueisha.co.jp/">MANGA Plus</a></div>
-		<div class="cooyactxt">Translation: WSStalkback <a href="https://twitter.com/Wsstalkback">twitter</a>|<a href="https://wsstalkback.blogspot.com/">blog</a></div>
-		<div class="cooyactxt">&copy; SHOGAKUKAN Inc. All rights reserved.</div>
+		<div class="cooyactxt">&copy; KODANSHA Inc. All rights reserved.</div>
 	
 	</div><!-- end .footer -->
 </div><!-- end .container -->
