--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@ div.desc {
   </div>
 </div>
 
+<div class="responsive">
+  <div class="gallery">
+    <a href="wsm/TOC">
+      <img src="wsm/TOC/img/logo.png" alt="">
+    </a>
+    <div class="desc"><h2><a href="wsm/TOC">WSM TOC hub</a></h2></div>
+  </div>
+</div>
 
 
 <div class="clearfix"></div>
