--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -116,5 +116,12 @@ div.desc {
 
 
 <div class="clearfix"></div>
+	
+<div class="center" style="text-align:center">
+	<p>Source: WSJ Discord<p>
+	<p>TL: Google & <a href="https://twitter.com/RaafGL">@RaafGL</a></p>
+	<p>Want to help? contact:<a href="https://twitter.com/WSM_manga"><img src="img/twt.png"></a></p>
+
+</div>	
 </div>
 </body>
