--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -120,7 +120,7 @@ div.desc {
 <div class="center" style="text-align:center">
 	<p>Source: WSJ Discord<p>
 	<p>TL: Google & <a href="https://twitter.com/RaafGL">@RaafGL</a></p>
-	<p>Want to help? contact:<a href="https://twitter.com/WSM_manga"><img src="img/twt.png" style="height:1em"></a></p>
+	<p>Want to help? contact:<a href="https://twitter.com/WSM_manga">WSM_manga</a></p>
 
 </div>	
 </div>
