--- a/wsm/TOC/19_28/index.html
+++ b/wsm/TOC/19_28/index.html
@@ -50,8 +50,8 @@
 
 	</div><!-- end .contents -->
 	<div id="footer">
-		<div><p>TL: Google & <a href="https://twitter.com/RaafGL">@RaafGL</a></p></div>
-		<div><p>Want to help? contact:<a href="https://twitter.com/WSM_manga">WSM_manga</a></p></div>
+		<div><p><b>TL: Google & <a href="https://twitter.com/RaafGL">@RaafGL</a></b></p></div>
+		<div><p><b>Want to help? contact:<a href="https://twitter.com/WSM_manga">WSM_manga</a></b></p></div>
 		<div class="cooyactxt">Original Concept: <a href="https://mangaplus.shueisha.co.jp/">MANGA Plus</a></div>
 		<div class="cooyactxt">&copy; KODANSHA Inc. All rights reserved.</div>
 	
