--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -117,7 +117,7 @@ div.desc {
 
 <div class="clearfix"></div>
 	
-<div class="center" style="text-align:center">
+<div class="center" style="text-align:center; line-height:1">
 	<p><b>Source: WSJ Discord</b><p>
 	<p><b>TL: Google & <a href="https://twitter.com/RaafGL">@RaafGL</a></b></p>
 	<p><b>Want to help? contact:<a href="https://twitter.com/WSM_manga">WSM_manga</a></b></p>
