--- a/TOC/19_10/index.html
+++ b/TOC/19_10/index.html
@@ -15,7 +15,11 @@
 	<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
-		<div class="img_wj"><img src="img/img_wj.jpg" alt=""></div>
+<div class="grid-container">
+  <div class="grid-item"><div class="img_nav"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></div></div>
+  <div class="grid-item"><div class="img_wj"><img src="https://manganimy.github.io/TOC/19_10/img/img_wj.jpg" alt=""></div></div>
+  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_11/"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
+</div>
 	</div><!-- end .header -->
 	
 	<div class="contents">
