--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <head> 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142193139-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142193139-1');
+</script>
+
   <link rel="shortcut icon"
    type="image/x-icon"
         href="fav.ico">
