--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -1,5 +1,15 @@
 <html>
 <meta charset="UTF-8">	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142193139-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142193139-1');
+</script>
+
 <head>
 	  <link rel="shortcut icon"
    type="image/x-icon"
