--- a/TOC/19_26/index.html
+++ b/TOC/19_26/index.html
@@ -1,6 +1,16 @@
 
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142193139-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142193139-1');
+</script>
+
 	<meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Weekly ShonenJump #26 2019 posting order & comments from the author." />
 <meta name="twitter:image" content="https://manganimy.github.io/TOC/19_26/img/top.jpg" />
