--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -16,7 +16,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Sunday TOC Hub">
 <meta property="og:description" content="Archive of Weekly Shonen Sunday Author Comments">
-<meta property="og:image" content="img/top.jpg">
+<meta property="og:image" content="https://manganimy.github.io/wss/TOC/img/top.jpg">
 <meta property="og:url" content="https://manganimy.github.io/wss/TOC/">
 <meta name="twitter:card" content="summary_large_image">	
 <style>
