--- a/TOC/19_12/index.html
+++ b/TOC/19_12/index.html
@@ -18,7 +18,7 @@
 <meta property="og:description" content="Table of contents &amp; Author Comments">
 <meta name="Keywords" content="Table of contents">
 <meta property="og:image" content="https://manganimy.github.io/TOC/19_12/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io/TOC/">
+<meta property="og:url" content="https://manganimy.github.io/TOC/19_12">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
