--- a/TOC/19_16/index.html
+++ b/TOC/19_16/index.html
@@ -14,8 +14,12 @@
 <meta charset="UTF-8">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta name="description" content="Table of contents">
+<meta property="og:title" content="Weekly Shonen Jump #16 2019">	
+<meta property="og:description" content="Table of contents &amp; Author Comments">
 <meta name="Keywords" content="Table of contents">
+<meta property="og:image" content="https://manganimy.github.io/TOC/19_16/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/19_16">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
