--- a/TOC/19_26/index.html
+++ b/TOC/19_26/index.html
@@ -10,16 +10,16 @@
 
   gtag('config', 'UA-142193139-1');
 </script>
-
-	<meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="Weekly ShonenJump #26 2019 posting order & comments from the author." />
-<meta name="twitter:image" content="https://manganimy.github.io/TOC/19_26/img/top.jpg" />
 	
 <meta charset="UTF-8">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta name="description" content="Table of contents">
+<meta property="og:title" content="Weekly Shonen Jump #26 2019">	
+<meta property="og:description" content="Table of contents &amp; Author Comments">
 <meta name="Keywords" content="Table of contents">
+<meta property="og:image" content="https://manganimy.github.io/TOC/19_26/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/19_26">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
