--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ div.desc {
   padding: 0 6px;
   float: left;
   width: 49.99999%;
+  margin: 6px 0;	
 }
 @media only screen and (max-width: 700px) {
   .responsive {
@@ -65,6 +66,7 @@ div.desc {
 @media only screen and (max-width: 500px) {
   .responsive {
     width: 49.99999%;
+    margin: 6px 0;
   }
 }
 .clearfix:after {
