--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         href="fav.ico">
  <title>Home</title>
  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+<meta property="og:title" content="Manga Magazines TOC Hub">
+<meta property="og:description" content="Archive of Manga Magazine TOCs and Author Comments">
+<meta property="og:image" content="head.jpg">
+<meta property="og:url" content="https://manganimy.github.io">
+<meta name="twitter:card" content="summary_large_image">	
  <style>
 body {
 	background: #d9d9d9;
@@ -85,8 +90,7 @@ div.desc {
   <div class="gallery">
     <a href="/TOC">
       <img src="TOC/img/logo.png" alt="">
-    </a>
-    <div class="desc"><h2><a href="/TOC">WSJ TOC hub</a></h2></div>
+    <div class="desc"><h2>WSJ TOC hub</h2></div></a>
   </div>
 </div>
 
@@ -95,8 +99,8 @@ div.desc {
   <div class="gallery">
     <a href="wss/TOC">
       <img src="wss/TOC/img/logo.png" alt="">
-    </a>
-    <div class="desc"><h2><a href="wss/TOC">WSS TOC hub</a></h2></div>
+    <div class="desc"><h2>WSS TOC hub</h2></div>
+	  </a>
   </div>
 </div>
 
@@ -104,8 +108,8 @@ div.desc {
   <div class="gallery">
     <a href="wsm/TOC">
       <img src="wsm/TOC/img/logo.png" alt="">
-    </a>
-    <div class="desc"><h2><a href="wsm/TOC">WSM TOC hub</a></h2></div>
+    <div class="desc"><h2>WSM TOC hub</h2></div>
+	</a>
   </div>
 </div>
 
