--- a/TOC/index.html
+++ b/TOC/index.html
@@ -11,7 +11,7 @@
 
 	  <link rel="shortcut icon"
    type="image/x-icon"
-        href="https://manganimy.github.io/fav.ico">
+        href="img/fav.ico">
 <title>Weekly Shonen Jump TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Jump TOC Hub">
